jellyseerr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  selector:
    app.kubernetes.io/name: jellyseerr
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
